1999-02-13 Michael Hanni <mhanni@sprintmail.com>

	* Small change to gui/Tools/GNUmakefile.preamble to allow for easy
	  linking on FreeBSD 3.x. (added -ljpeg)

Fri Feb 12 21:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: Tidied some more.
	* Source/NSText.m: Don't use display - use setNeedsDisplay: instead
	so that drawing gets done automatically.

Fri Feb 12 16:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: Improve window flushing
	* Source/NSWindow.m: ditto

Fri Feb 12 13:37:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: Fixes to draw text using NSText (by Benhur)

Fri Feb 12 12:56:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSView.h: Added missing method declarations for
	display methods.
	* Source/NSView.m: Rewrote all the display methods to the current spec
	(I hope).

Thu Feb 11 14:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Coordinate fixes by Benhur to -
	* Source/NSClipView.m: Coordinate fixes by Benhur
	* Source/NSColor.m: Retain things properly when decoding.
	* Source/NSMatrix.m: Matrix coordinate system is flipped.
	* Source/NSScroller.m: Coordinate fixes

Wed Feb 10 12:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSClipView.m:  Tidy flip-view errors by Benhur
	* Source/NSText.m: Lock focus around drawing insertion point while
	becoming/resiging first responder.

Wed Feb 10 10:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: ([-copyWithZone:]) Fixed memory leak - was copying
	AND retaining contents.
	
Tue Feb  9 12:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
	
	* Source/NSView.m: Various tidyups suggested by Benhur
	* Source/PSMatrix.m: ([-rectInMatrixSpace:]) and ([-sizeInMatrixSpace:])
	fixed for negative values.
	* Source/NSScrollView.m: Resize code fix.
